prevent x overflow

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -28,6 +28,7 @@ html {
 body {
   font-family: "Jetbrains Mono", monospace;
   animation: fadeIn 1.5s ease-out forwards;
+  overflow-x: hidden;
 }
 
 :root {
